# Summarizer

./: .gitmodules  Readme.md  pyproject.toml
content/: the_alchemist.txt
src/: chat_utils.py  database_utils.py  main.py
